# guardian

./: .envrc.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  package-lock.json  pyproject.toml
.github/workflows/: default.yml
backend/: app.py  constants.py  exceptions.py
backend/database/: database.py  db.py  guardian.db-journal  models.py
backend/providers/: auth.py  llm.py  openai.py  pii.py
backend/routers/: admin_router.py  analytics_router.py  api.py  auth_router.py  authentication.py  llm_router.py  openai_router.py  pii_router.py
backend/utils/: anonymizer.py  pii_scrubber.py  save_db.py  scrubber.py  user_info.py
database/: db.py  guardian.db
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: ModalHook.tsx  useAuth.ts
frontend/src/layouts/: AdminLayout.tsx  AuthContext.tsx  AuthLayout.tsx  ProtectedLayout.tsx  RootLayout.tsx
frontend/src/pages/: AdminConsole.tsx  ChatBotPage.tsx  DataLeakAnalytics.tsx  Home.tsx  PiiIdentifier.tsx  Settings.tsx
frontend/src/pages/Authentication/: ForgotPassword.tsx  Login.tsx  Register.tsx
frontend/src/pages/componenets/: Banner.tsx  Chat.tsx  ForgotPasswordComponent.tsx  LoginComponent.tsx  Logo.tsx  RegisterComponent.tsx
frontend/src/pages/components/: Banner.tsx  Chat.tsx  LoginComponent.tsx  RegisterComponent.tsx
frontend/src/types/: ModalHookProps.tsx  Record.ts  User.ts  UserLoginInfo.ts  UserSignUpInfo.ts
frontend/src/utils/: authUtils.tsx
