[tool.poetry]
name = "guardian"
version = "0.1.0"
description = ""
authors = ["Alex Carvalho <alexander_sck@live.ca>", "Imran Yafith <imranyafith@gmail.com>", "Deeptanshu Sanghani <deeptanshusanghani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
pre-commit = "^3.6.0"
gpt4all = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
